<resources>
    //App name
    <string name="app_name">Ambience Sensor</string>
    <string name="Settings">Settings</string>
    <string name="aboutUsActivity">About Us</string>
    <string name="Charts">Charts</string>
    <string name="LiveCharts">Live Charts</string>
    <string name="Heatmaps">Heatmaps</string>

    //String for the top menu

    //Strings From the Navigation Drawer
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Live Charts</item>
        <item>Charts</item>
        <item>Heatmap</item>
        <item>Settings</item>
        <item>About Us</item>

    </string-array>
    <string name="home">Home</string>
    <string name="title_activity_main">Ambience Sensor</string>
    <string name="title">Proyect\'s description</string>
    <string name="lineChartsButton">LineCharts</string>
    <string name="calendarButton">Calendar</string>
    <string name="histogramButton">Histogram</string>
    <string name="clusteringButton">Clustering</string>
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="CO2">CO2</string>
    <string name="lightIntensity">Light Intensity</string>
    <string name="LightColor">Light Color</string>
    <string name="Performance">Performance</string>
    <string name="showChart">Show Charts</string>
    <string name="selectDateFrom">Select Date From</string>
    <string name="selectDateTo">Select Date To</string>
    <string name="descrip">Our goal is to measure the surrounding environment in order to improve the general performance in activities such as working or sport, thanks to a data collection and analysis. Regarding the project, it consists of a box containing several sensors, a GPS and a HC-05 Bluetooth module, all of them connected to an Arduino Uno.The Bluetooth communicates with an Android smartphone with our app installed. Each user has their own account on this app.This project has been developed by:Joan Capell, Daniel del Pozo, David Fernández, Nick Schrader.</string>
    <string name="LogIn">Log In</string>
    <string name="SignUp">Not account yet? Sign Up!</string>
    <string name="User">User</string>
    <string name="Password">Password</string>
    <string name="Auntent">Autenticating...</string>
    <string name="LogInTitle">Please Log In</string>
    <string name="CreateAcc">Create Account</string>
    <string name="membSI">Already a member? Sign In!</string>

</resources>
