<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="davidfdez.capteuratmospherique.AboutUsActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/linechart"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/citron"
        android:onClick="openLineChart"
        android:text="@string/lineChartsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/histogram"
        app:layout_constraintRight_toRightOf="@+id/histogram"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/calendar"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/asd"
        android:onClick="openCalendar"
        android:text="@string/calendarButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/linechart"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/linechart"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/clustering"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="3dp"
        android:backgroundTint="@color/edfsdf"
        android:onClick="openClustering"
        android:text="@string/clusteringButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/histogram"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/histogram"
        app:layout_constraintRight_toRightOf="@+id/calendar"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/histogram"
        android:layout_width="173dp"
        android:layout_height="160dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/asdss"
        android:onClick="openHistogram"
        android:text="@string/histogramButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linechart"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
